nginx-pod-pass.yml
apiVersion: v1
kind: Pod
metadata: 
  name: nginx-secret-pass
  labels:
    app: nginx-secret-pass
spec:
  containers:
    - name: nginx-secret-pass
      image: nginx
      ports:
        - containerPort: 80
      volumeMounts:
        - name: secret
          mountPath: "/usr/share/nginx/html/"
          readOnly: true
  volumes:
    - name: secret
      secret:
        secretName: my-secret
        items:
          - key: password
            path: db-pass
