nginx-pod-url.yml
apiVersion: v1
kind: Pod
metadata: 
  name: nginx-secret-url
  labels:
    app: nginx-secret-url
spec:
  containers:
    - name: nginx-secret-url
      image: nginx
      ports:
        - containerPort: 80
      volumeMounts:
        - name: secret
          mountPath: "/usr/share/nginx/html/"
          readOnly: true
  volumes:
    - name: secret
      secret:
        secretName: my-secret
        items:
          - key: url
            path: db-url
