nginx-pod-user.yml
apiVersion: v1
kind: Pod
metadata: 
  name: nginx-secret-user
  labels:
    app: nginx-secret-user
spec:
  containers:
    - name: nginx-secret-user
      image: nginx
      ports:
        - containerPort: 80
      volumeMounts:
        - name: secret
          mountPath: "/usr/share/nginx/html/"
          readOnly: true
  volumes:
    - name: secret
      secret:
        secretName: my-secret
        items:
          - key: username
            path: db-user
