nginx-pod-with-secrets.yaml
apiVersion: v1
kind: Pod
metadata: 
  name: nginx-secret
  labels:
    app: nginx-secret
spec:
  containers:
    - name: nginx-secret
      image: nginx
      ports:
        - containerPort: 80
      volumeMounts:
        - name: secret
          mountPath: "/usr/share/nginx/html"
          readOnly: true
  volumes:
    - name: secret
      secret:
        secretName: my-secret
