svc-pass.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-pass
  labels:
spec:
  ports:
  - port: 8889
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: nginx-secret-pass
