svc-url.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-url
  labels:
spec:
  ports:
  - port: 8890
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: nginx-secret-url
