svc-user.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-user
  labels:
spec:
  ports:
  - port: 8888
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: nginx-secret-user
