ingress-secret.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: secret-ingress
spec:
  rules:
  - host: secret.com
    http:
      paths:
      - path: /db-user
        backend:
          serviceName: svc-user
          servicePort: 80
      - path: /db-pass
        backend:
          serviceName: svc-pass
          servicePort: 80
      - path: /db-url
        backend:
          serviceName: svc-url
          servicePort: 80
